--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <header>
         <h1 id='title'>Minha Lista de Tarefas</h1>
     </header>
+    <section>
+        <p id='funcionamento'> Clique duas vezes em um item para marcá-lo como completo</p>
+        <input id='texto-tarefa'type="text">
+    </section>
 
 
     <footer>
