--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     </header>
     <section>
         <p id='funcionamento'> Clique duas vezes em um item para marcá-lo como completo</p>
-        <input id='texto-tarefa'type="text">
+        <input id='texto-tarefa' class='input' type="text">
     </section>
+    <section>
+        <ol id='lista-tarefas'></ol>
+        <button id='criar-tarefa' class='btn'>To do</button>
+    </section>
+    
 
 
     <footer>
