--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,7 +18,9 @@
     </section>
     <section>
         <ol id='lista-tarefas'></ol>
-        <button id='criar-tarefa' class='btn'>To do</button>
+        <button id='criar-tarefa' class='btn'>Adicionar</button>
+        <button id="apaga-tudo" class='btn'>Apagar tudo</button>
+    
     </section>
     
 
