--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <ol id='lista-tarefas'></ol>
         <button id='criar-tarefa' class='btn'>Adicionar</button>
         <button id="apaga-tudo" class='btn'>Apagar tudo</button>
-    
+        <button id="remover-finalizados" class='btn'>Apagar concluidos</button>
+
     </section>
     
 
